set(src_dirs
            SPI
            LCD
            CAMERA)

set(include_dirs
            SPI
            LCD
            CAMERA)

set(requires
            driver
            esp32-camera)

idf_component_register(SRC_DIRS ${src_dirs} INCLUDE_DIRS ${include_dirs} REQUIRES ${requires})

component_compile_options(-ffast-math -O3 -Wno-error=format=-Wno-format)